--- a/CarsApplication/CarsApplication.csproj
+++ b/CarsApplication/CarsApplication.csproj
@@ -252,6 +252,7 @@
     <Content Include="Views\Point\Details.cshtml" />
     <Content Include="Views\Point\Edit.cshtml" />
     <Content Include="Views\Point\Index.cshtml" />
+    <Content Include="Views\Journey\Clone.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
